####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = ad-0.mp3 ad-1.mp3 ad-10.mp3 ad-11.mp3 ad-12.mp3 ad-13.mp3 ad-14.mp3 ad-15.mp3 ad-16.mp3 ad-17.mp3 ad-18.mp3 ad-19.mp3 ad-2.mp3 ad-20.mp3 ad-21.mp3 ad-22.mp3 ad-23.mp3 ad-24.mp3 ad-25.mp3 ad-26.mp3 ad-27.mp3 ad-3.mp3 ad-4.mp3 ad-5.mp3 ad-6.mp3 ad-7.mp3 ad-8.mp3 ad-9.mp3 

install-data-local:
	$(mkinstalldirs) $(kde_datadir)/klettres/Danish/syllab/
	$(INSTALL_DATA) $(srcdir)/ad-0.mp3 $(kde_datadir)/klettres/Danish/syllab/ad-0.mp3
	$(mkinstalldirs) $(kde_datadir)/klettres/Danish/syllab/
	$(INSTALL_DATA) $(srcdir)/ad-1.mp3 $(kde_datadir)/klettres/Danish/syllab/ad-1.mp3
	$(mkinstalldirs) $(kde_datadir)/klettres/Danish/syllab/
	$(INSTALL_DATA) $(srcdir)/ad-10.mp3 $(kde_datadir)/klettres/Danish/syllab/ad-10.mp3
	$(mkinstalldirs) $(kde_datadir)/klettres/Danish/syllab/
	$(INSTALL_DATA) $(srcdir)/ad-11.mp3 $(kde_datadir)/klettres/Danish/syllab/ad-11.mp3
	$(mkinstalldirs) $(kde_datadir)/klettres/Danish/syllab/
	$(INSTALL_DATA) $(srcdir)/ad-12.mp3 $(kde_datadir)/klettres/Danish/syllab/ad-12.mp3
	$(mkinstalldirs) $(kde_datadir)/klettres/Danish/syllab/
	$(INSTALL_DATA) $(srcdir)/ad-13.mp3 $(kde_datadir)/klettres/Danish/syllab/ad-13.mp3
	$(mkinstalldirs) $(kde_datadir)/klettres/Danish/syllab/
	$(INSTALL_DATA) $(srcdir)/ad-14.mp3 $(kde_datadir)/klettres/Danish/syllab/ad-14.mp3
	$(mkinstalldirs) $(kde_datadir)/klettres/Danish/syllab/
	$(INSTALL_DATA) $(srcdir)/ad-15.mp3 $(kde_datadir)/klettres/Danish/syllab/ad-15.mp3
	$(mkinstalldirs) $(kde_datadir)/klettres/Danish/syllab/
	$(INSTALL_DATA) $(srcdir)/ad-16.mp3 $(kde_datadir)/klettres/Danish/syllab/ad-16.mp3
	$(mkinstalldirs) $(kde_datadir)/klettres/Danish/syllab/
	$(INSTALL_DATA) $(srcdir)/ad-17.mp3 $(kde_datadir)/klettres/Danish/syllab/ad-17.mp3
	$(mkinstalldirs) $(kde_datadir)/klettres/Danish/syllab/
	$(INSTALL_DATA) $(srcdir)/ad-18.mp3 $(kde_datadir)/klettres/Danish/syllab/ad-18.mp3
	$(mkinstalldirs) $(kde_datadir)/klettres/Danish/syllab/
	$(INSTALL_DATA) $(srcdir)/ad-19.mp3 $(kde_datadir)/klettres/Danish/syllab/ad-19.mp3
	$(mkinstalldirs) $(kde_datadir)/klettres/Danish/syllab/
	$(INSTALL_DATA) $(srcdir)/ad-2.mp3 $(kde_datadir)/klettres/Danish/syllab/ad-2.mp3
	$(mkinstalldirs) $(kde_datadir)/klettres/Danish/syllab/
	$(INSTALL_DATA) $(srcdir)/ad-20.mp3 $(kde_datadir)/klettres/Danish/syllab/ad-20.mp3
	$(mkinstalldirs) $(kde_datadir)/klettres/Danish/syllab/
	$(INSTALL_DATA) $(srcdir)/ad-21.mp3 $(kde_datadir)/klettres/Danish/syllab/ad-21.mp3
	$(mkinstalldirs) $(kde_datadir)/klettres/Danish/syllab/
	$(INSTALL_DATA) $(srcdir)/ad-22.mp3 $(kde_datadir)/klettres/Danish/syllab/ad-22.mp3
	$(mkinstalldirs) $(kde_datadir)/klettres/Danish/syllab/
	$(INSTALL_DATA) $(srcdir)/ad-23.mp3 $(kde_datadir)/klettres/Danish/syllab/ad-23.mp3
	$(mkinstalldirs) $(kde_datadir)/klettres/Danish/syllab/
	$(INSTALL_DATA) $(srcdir)/ad-24.mp3 $(kde_datadir)/klettres/Danish/syllab/ad-24.mp3
	$(mkinstalldirs) $(kde_datadir)/klettres/Danish/syllab/
	$(INSTALL_DATA) $(srcdir)/ad-25.mp3 $(kde_datadir)/klettres/Danish/syllab/ad-25.mp3
	$(mkinstalldirs) $(kde_datadir)/klettres/Danish/syllab/
	$(INSTALL_DATA) $(srcdir)/ad-26.mp3 $(kde_datadir)/klettres/Danish/syllab/ad-26.mp3
	$(mkinstalldirs) $(kde_datadir)/klettres/Danish/syllab/
	$(INSTALL_DATA) $(srcdir)/ad-27.mp3 $(kde_datadir)/klettres/Danish/syllab/ad-27.mp3
	$(mkinstalldirs) $(kde_datadir)/klettres/Danish/syllab/
	$(INSTALL_DATA) $(srcdir)/ad-3.mp3 $(kde_datadir)/klettres/Danish/syllab/ad-3.mp3
	$(mkinstalldirs) $(kde_datadir)/klettres/Danish/syllab/
	$(INSTALL_DATA) $(srcdir)/ad-4.mp3 $(kde_datadir)/klettres/Danish/syllab/ad-4.mp3
	$(mkinstalldirs) $(kde_datadir)/klettres/Danish/syllab/
	$(INSTALL_DATA) $(srcdir)/ad-5.mp3 $(kde_datadir)/klettres/Danish/syllab/ad-5.mp3
	$(mkinstalldirs) $(kde_datadir)/klettres/Danish/syllab/
	$(INSTALL_DATA) $(srcdir)/ad-6.mp3 $(kde_datadir)/klettres/Danish/syllab/ad-6.mp3
	$(mkinstalldirs) $(kde_datadir)/klettres/Danish/syllab/
	$(INSTALL_DATA) $(srcdir)/ad-7.mp3 $(kde_datadir)/klettres/Danish/syllab/ad-7.mp3
	$(mkinstalldirs) $(kde_datadir)/klettres/Danish/syllab/
	$(INSTALL_DATA) $(srcdir)/ad-8.mp3 $(kde_datadir)/klettres/Danish/syllab/ad-8.mp3
	$(mkinstalldirs) $(kde_datadir)/klettres/Danish/syllab/
	$(INSTALL_DATA) $(srcdir)/ad-9.mp3 $(kde_datadir)/klettres/Danish/syllab/ad-9.mp3

uninstall-local:
	-rm -f $(kde_datadir)/klettres/Danish/syllab/ad-0.mp3
	-rm -f $(kde_datadir)/klettres/Danish/syllab/ad-1.mp3
	-rm -f $(kde_datadir)/klettres/Danish/syllab/ad-10.mp3
	-rm -f $(kde_datadir)/klettres/Danish/syllab/ad-11.mp3
	-rm -f $(kde_datadir)/klettres/Danish/syllab/ad-12.mp3
	-rm -f $(kde_datadir)/klettres/Danish/syllab/ad-13.mp3
	-rm -f $(kde_datadir)/klettres/Danish/syllab/ad-14.mp3
	-rm -f $(kde_datadir)/klettres/Danish/syllab/ad-15.mp3
	-rm -f $(kde_datadir)/klettres/Danish/syllab/ad-16.mp3
	-rm -f $(kde_datadir)/klettres/Danish/syllab/ad-17.mp3
	-rm -f $(kde_datadir)/klettres/Danish/syllab/ad-18.mp3
	-rm -f $(kde_datadir)/klettres/Danish/syllab/ad-19.mp3
	-rm -f $(kde_datadir)/klettres/Danish/syllab/ad-2.mp3
	-rm -f $(kde_datadir)/klettres/Danish/syllab/ad-20.mp3
	-rm -f $(kde_datadir)/klettres/Danish/syllab/ad-21.mp3
	-rm -f $(kde_datadir)/klettres/Danish/syllab/ad-22.mp3
	-rm -f $(kde_datadir)/klettres/Danish/syllab/ad-23.mp3
	-rm -f $(kde_datadir)/klettres/Danish/syllab/ad-24.mp3
	-rm -f $(kde_datadir)/klettres/Danish/syllab/ad-25.mp3
	-rm -f $(kde_datadir)/klettres/Danish/syllab/ad-26.mp3
	-rm -f $(kde_datadir)/klettres/Danish/syllab/ad-27.mp3
	-rm -f $(kde_datadir)/klettres/Danish/syllab/ad-3.mp3
	-rm -f $(kde_datadir)/klettres/Danish/syllab/ad-4.mp3
	-rm -f $(kde_datadir)/klettres/Danish/syllab/ad-5.mp3
	-rm -f $(kde_datadir)/klettres/Danish/syllab/ad-6.mp3
	-rm -f $(kde_datadir)/klettres/Danish/syllab/ad-7.mp3
	-rm -f $(kde_datadir)/klettres/Danish/syllab/ad-8.mp3
	-rm -f $(kde_datadir)/klettres/Danish/syllab/ad-9.mp3

####### kdevelop will overwrite this part!!! (end)############
