####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = a-0.mp3 a-1.mp3 a-10.mp3 a-11.mp3 a-12.mp3 a-13.mp3 a-14.mp3 a-15.mp3 a-16.mp3 a-17.mp3 a-18.mp3 a-19.mp3 a-2.mp3 a-20.mp3 a-21.mp3 a-3.mp3 a-4.mp3 a-5.mp3 a-6.mp3 a-7.mp3 a-8.mp3 a-9.mp3 

install-data-local:
	$(mkinstalldirs) $(kde_datadir)/klettres/Dutch/alpha/
	$(INSTALL_DATA) $(srcdir)/a-0.mp3 $(kde_datadir)/klettres/Dutch/alpha/a-0.mp3
	$(mkinstalldirs) $(kde_datadir)/klettres/Dutch/alpha/
	$(INSTALL_DATA) $(srcdir)/a-1.mp3 $(kde_datadir)/klettres/Dutch/alpha/a-1.mp3
	$(mkinstalldirs) $(kde_datadir)/klettres/Dutch/alpha/
	$(INSTALL_DATA) $(srcdir)/a-10.mp3 $(kde_datadir)/klettres/Dutch/alpha/a-10.mp3
	$(mkinstalldirs) $(kde_datadir)/klettres/Dutch/alpha/
	$(INSTALL_DATA) $(srcdir)/a-11.mp3 $(kde_datadir)/klettres/Dutch/alpha/a-11.mp3
	$(mkinstalldirs) $(kde_datadir)/klettres/Dutch/alpha/
	$(INSTALL_DATA) $(srcdir)/a-12.mp3 $(kde_datadir)/klettres/Dutch/alpha/a-12.mp3
	$(mkinstalldirs) $(kde_datadir)/klettres/Dutch/alpha/
	$(INSTALL_DATA) $(srcdir)/a-13.mp3 $(kde_datadir)/klettres/Dutch/alpha/a-13.mp3
	$(mkinstalldirs) $(kde_datadir)/klettres/Dutch/alpha/
	$(INSTALL_DATA) $(srcdir)/a-14.mp3 $(kde_datadir)/klettres/Dutch/alpha/a-14.mp3
	$(mkinstalldirs) $(kde_datadir)/klettres/Dutch/alpha/
	$(INSTALL_DATA) $(srcdir)/a-15.mp3 $(kde_datadir)/klettres/Dutch/alpha/a-15.mp3
	$(mkinstalldirs) $(kde_datadir)/klettres/Dutch/alpha/
	$(INSTALL_DATA) $(srcdir)/a-16.mp3 $(kde_datadir)/klettres/Dutch/alpha/a-16.mp3
	$(mkinstalldirs) $(kde_datadir)/klettres/Dutch/alpha/
	$(INSTALL_DATA) $(srcdir)/a-17.mp3 $(kde_datadir)/klettres/Dutch/alpha/a-17.mp3
	$(mkinstalldirs) $(kde_datadir)/klettres/Dutch/alpha/
	$(INSTALL_DATA) $(srcdir)/a-18.mp3 $(kde_datadir)/klettres/Dutch/alpha/a-18.mp3
	$(mkinstalldirs) $(kde_datadir)/klettres/Dutch/alpha/
	$(INSTALL_DATA) $(srcdir)/a-19.mp3 $(kde_datadir)/klettres/Dutch/alpha/a-19.mp3
	$(mkinstalldirs) $(kde_datadir)/klettres/Dutch/alpha/
	$(INSTALL_DATA) $(srcdir)/a-2.mp3 $(kde_datadir)/klettres/Dutch/alpha/a-2.mp3
	$(mkinstalldirs) $(kde_datadir)/klettres/Dutch/alpha/
	$(INSTALL_DATA) $(srcdir)/a-20.mp3 $(kde_datadir)/klettres/Dutch/alpha/a-20.mp3
	$(mkinstalldirs) $(kde_datadir)/klettres/Dutch/alpha/
	$(INSTALL_DATA) $(srcdir)/a-21.mp3 $(kde_datadir)/klettres/Dutch/alpha/a-21.mp3
	$(mkinstalldirs) $(kde_datadir)/klettres/Dutch/alpha/
	$(INSTALL_DATA) $(srcdir)/a-3.mp3 $(kde_datadir)/klettres/Dutch/alpha/a-3.mp3
	$(mkinstalldirs) $(kde_datadir)/klettres/Dutch/alpha/
	$(INSTALL_DATA) $(srcdir)/a-4.mp3 $(kde_datadir)/klettres/Dutch/alpha/a-4.mp3
	$(mkinstalldirs) $(kde_datadir)/klettres/Dutch/alpha/
	$(INSTALL_DATA) $(srcdir)/a-5.mp3 $(kde_datadir)/klettres/Dutch/alpha/a-5.mp3
	$(mkinstalldirs) $(kde_datadir)/klettres/Dutch/alpha/
	$(INSTALL_DATA) $(srcdir)/a-6.mp3 $(kde_datadir)/klettres/Dutch/alpha/a-6.mp3
	$(mkinstalldirs) $(kde_datadir)/klettres/Dutch/alpha/
	$(INSTALL_DATA) $(srcdir)/a-7.mp3 $(kde_datadir)/klettres/Dutch/alpha/a-7.mp3
	$(mkinstalldirs) $(kde_datadir)/klettres/Dutch/alpha/
	$(INSTALL_DATA) $(srcdir)/a-8.mp3 $(kde_datadir)/klettres/Dutch/alpha/a-8.mp3
	$(mkinstalldirs) $(kde_datadir)/klettres/Dutch/alpha/
	$(INSTALL_DATA) $(srcdir)/a-9.mp3 $(kde_datadir)/klettres/Dutch/alpha/a-9.mp3

uninstall-local:
	-rm -f $(kde_datadir)/klettres/Dutch/alpha/a-0.mp3
	-rm -f $(kde_datadir)/klettres/Dutch/alpha/a-1.mp3
	-rm -f $(kde_datadir)/klettres/Dutch/alpha/a-10.mp3
	-rm -f $(kde_datadir)/klettres/Dutch/alpha/a-11.mp3
	-rm -f $(kde_datadir)/klettres/Dutch/alpha/a-12.mp3
	-rm -f $(kde_datadir)/klettres/Dutch/alpha/a-13.mp3
	-rm -f $(kde_datadir)/klettres/Dutch/alpha/a-14.mp3
	-rm -f $(kde_datadir)/klettres/Dutch/alpha/a-15.mp3
	-rm -f $(kde_datadir)/klettres/Dutch/alpha/a-16.mp3
	-rm -f $(kde_datadir)/klettres/Dutch/alpha/a-17.mp3
	-rm -f $(kde_datadir)/klettres/Dutch/alpha/a-18.mp3
	-rm -f $(kde_datadir)/klettres/Dutch/alpha/a-19.mp3
	-rm -f $(kde_datadir)/klettres/Dutch/alpha/a-2.mp3
	-rm -f $(kde_datadir)/klettres/Dutch/alpha/a-20.mp3
	-rm -f $(kde_datadir)/klettres/Dutch/alpha/a-21.mp3
	-rm -f $(kde_datadir)/klettres/Dutch/alpha/a-3.mp3
	-rm -f $(kde_datadir)/klettres/Dutch/alpha/a-4.mp3
	-rm -f $(kde_datadir)/klettres/Dutch/alpha/a-5.mp3
	-rm -f $(kde_datadir)/klettres/Dutch/alpha/a-6.mp3
	-rm -f $(kde_datadir)/klettres/Dutch/alpha/a-7.mp3
	-rm -f $(kde_datadir)/klettres/Dutch/alpha/a-8.mp3
	-rm -f $(kde_datadir)/klettres/Dutch/alpha/a-9.mp3

####### kdevelop will overwrite this part!!! (end)############
